fix layout breaking tooltip

--- a/src/app/shared/components/tooltip/tooltip.component.scss
+++ b/src/app/shared/components/tooltip/tooltip.component.scss
@@ -1,5 +1,5 @@
 :host {
-  position: absolute;
+  position: fixed;
   color: black;
   visibility: hidden;
   z-index: -1;
